update meta descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>BB Starter</title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <title>BB Starter - Backbone Bootstrap starter</title>
+    <meta name="keywords" content="backbone, underscore, require, bootstrap, client" />
+    <meta name="description" content="A boilerplate client web application in backbone.js, underscore.js, require.js and bootstrap" />
     <meta name="robots" content="nofollow" />
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
