--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>BB Starter - Backbone Bootstrap starter</title>
     <meta name="keywords" content="backbone, underscore, require, bootstrap, client" />
     <meta name="description" content="A boilerplate client web application in backbone.js, underscore.js, require.js and bootstrap" />
-    <meta name="robots" content="nofollow" />
+    <!-- <meta name="robots" content="nofollow" /> -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- Html5Bp styles -->
