--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="/assets/css/html5bp.css">
 
     <!-- Bootstrap styles -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css">
-    <link href="/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/bootstrap.css">
+    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Application styles -->
     <link rel="stylesheet" href="/assets/css/application.css">
@@ -52,9 +52,8 @@
       </div>
     </header>
 
-    <div class="container" role="main">
-      <div class="content" id="page">
-      </div>
+    <div class="container" role="main" id="main">
+      <div class="content" id="page"></div>
     </div>
 
     <footer id="footer"></footer>
