--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,9 @@
     </header>
 
     <div class="container" role="main" id="main">
-      <div class="content" id="page"></div>
+      <div class="content" id="page">
+        <div class="loader"></div>
+      </div>
     </div>
 
     <footer id="footer"></footer>
