--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <title>BB Starter - Backbone Bootstrap starter</title>
-    <meta name="keywords" content="backbone, underscore, require, bootstrap, client" />
-    <meta name="description" content="A boilerplate client web application in backbone.js, underscore.js, require.js and bootstrap" />
+    <meta name="keywords" content="demo, backbone, underscore, require, bootstrap, client, nodejs, mongodb, expressjs" />
+    <meta name="description" content="A boilerplate client web application in backbone.js, underscore.js, require.js and bootstrap. Server implementation on node.js, express which uses mongodb" />
     <!-- <meta name="robots" content="nofollow" /> -->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
@@ -29,28 +29,7 @@
   </head>
 
   <body>
-    <header id="header">
-      <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="#">BB starter</a>
-            <div class="nav-collapse">
-              <ul class="nav">
-                <li class="active"><a href="/#">Home</a></li>
-                <li><a href="/#about">About</a></li>
-                <li><a href="/#items">Items</a></li>
-                <li><a href="/#items/add">Add</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-    </header>
+    <header id="header"></header>
 
     <div class="container" role="main" id="main">
       <div class="content" id="page">
