--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,19 @@
   </head>
 
   <body>
-    <header id="header"></header>
+    <header id="header">
+      <div class="navbar navbar-fixed-top" role="navigation">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="brand" href="#">BB starter demo</a>
+            <div class="nav-collapse">
+              <ul class="nav">
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </div>
+      </div>
+    </header>
 
     <div class="container" role="main" id="main">
       <div class="content" id="page">
